--- a/style.css
+++ b/style.css
@@ -57,15 +57,24 @@ header
 
 .periexomeno
 {
-width: 90%;
-height: 80%;
-position: absolute;
-top:100px;
-left:100px;
-background-color: black;
+width: auto;
+height: 70%;
+position: fixed;
+top:150px;
+left:150px;
+right:150px;
+background-color: white;
  	
 }
+
+.gallery
+{
+
+	margin:40px;
+	float: left;
+	width:180px;
 	
+}
 	
 	
 	
