--- a/style.css
+++ b/style.css
@@ -85,6 +85,26 @@ text-transform: uppercase;
 }
 
 
+.welcome{
+	position: absolute;
+	width: 1200px;
+	margin-left: 0px;
+	
+
+}
+h1
+{
+	color: white;
+	text-transform: uppercase;
+	font-size: 70px;
+	text-align: center;
+	margin-top: 275px;
+	
+	}
+	
+	
+
+
 
 
 	
