--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ position: fixed;
 top:150px;
 left:150px;
 right:150px;
-background-color: lightgray;
+background-color: white;
  	
 }
 
@@ -75,7 +75,12 @@ background-color: lightgray;
 	width:180px;
 	
 }
+
+.gallery-name{
+	color: black;
 	
+}
+
 .footer
 {
 display: inline-bloks;
@@ -92,16 +97,27 @@ text-transform: uppercase;
 	
 
 }
-h1
-{
-	color: white;
-	text-transform: uppercase;
-	font-size: 70px;
-	text-align: center;
-	margin-top: 275px;
-	
-	}
-	
+
+.details{
+	color:black;
+}
+
+.details .textdetails {
+  visibility: hidden;
+  width: 250px;
+  background-color:  #262626;
+  color: #fff;  
+  padding: 5px 25px;
+  border-radius: 6px;  
+  position: absolute;
+  z-index: 1;
+  top: 80px;
+}
+
+.details:hover .textdetails {
+  visibility: visible;
+}
+
 
 p {
   text-align: center;
